--- a/case_study_furama/furama/src/main/resources/templates/customer/customer-create.html
+++ b/case_study_furama/furama/src/main/resources/templates/customer/customer-create.html
@@ -15,7 +15,7 @@
         <div class="col-lg-3"></div>
 
         <div style="background: #e9f2ef" class="col-lg-6 shadow-lg">
-            <form action="/customer/save"  method="post" th:object="${customerDto}">
+            <form action="/customer/save"  method="post" th:object="${customer}">
                 <div class="mb-5 mt-3 text-center fst-italic">
                     <h1>Add New Customer Form</h1>
                 </div>
