--- a/case_study_furama/furama/src/main/resources/templates/customer/customer-list.html
+++ b/case_study_furama/furama/src/main/resources/templates/customer/customer-list.html
@@ -41,10 +41,10 @@
                        aria-label="Search">
                 <input class="form-control me-2 fst-italic" type="search" name="email" placeholder="Search"
                        aria-label="Search">
-                <select th:field="*{customerType}" name="customerType" id="customerType" class="form-select" aria-label="Default select example">
+                <select  name="customerType" id="customerType" class="form-select" aria-label="Default select example">
                     <option value="" selected>Choose</option>
                     <option th:each="customerTypeObj : ${customerTypeList}"
-                            th:value="${customerTypeObj.id}"
+                            th:value="${customerTypeObj.name}"
                             th:text="${customerTypeObj.name}">
                     </option>
                 </select>
@@ -97,7 +97,7 @@
                     <td th:text="${customer.customerType.name}"></td>
                     <td th:text="${customer.address}"></td>
                     <td>
-                        <a th:href="@{/customer/edit(id=${customer.id})}" class="btn btn-secondary">
+                        <a th:href="@{/customer/edit/__${customer.id}__}" class="btn btn-secondary">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-pencil" viewBox="0 0 16 16">
                                 <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
@@ -154,23 +154,6 @@
         </ul>
 
     </div>
-
-<!--    <div class="row mt-3">-->
-<!--        <div class="col-lg-4 text-end">-->
-<!--            <a th:if="${customers.hasPrevious()}"-->
-<!--               th:href="@{/customer/(page=${customers.number -1}, keySearch=${name})}"-->
-<!--               class="btn btn-success fst-italic">previous</a>-->
-<!--        </div>-->
-<!--        <div class="col-lg-4 text-center">-->
-<!--            <span th:text="${customers.number + 1}"></span>-->
-<!--            <span th:text="${customers.totalPages}"></span>-->
-<!--        </div>-->
-<!--        <div class="col-lg-4 text-start">-->
-<!--            <a th:if="${customers.hasNext()}"-->
-<!--               th:href="@{/customer/(page=${customers.number + 1}, keySearch=${name})}"-->
-<!--               class="btn btn-success fst-italic">next</a>-->
-<!--        </div>-->
-<!--    </div>-->
 </div>
 <!-- Modal delete -->
 <div class="modal fade" id="modalDelete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -194,8 +177,8 @@
     </div>
 </div>
 <script>
-    function deleteCustomer(name, deleteId ) {
-        document.getElementById("deleteId").value = deleteId;
+    function deleteCustomer(name, id ) {
+        document.getElementById("deleteId").value = id;
         document.getElementById("deleteName").innerText = name;
     }
 </script>
