--- a/case_study_furama/furama/src/main/resources/templates/facility/facility-edit.html
+++ b/case_study_furama/furama/src/main/resources/templates/facility/facility-edit.html
@@ -44,21 +44,27 @@
             <div class="mb-3">
                 <label for="name" class="form-label fst-italic fw-bold ">Name Service:</label>
                 <input th:field="*{name}"  type="text" id="name" class="form-control" >
+                <p style="color: red" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"> </p>
+
             </div>
 
             <div class="mb-3">
                 <label for="area" class="form-label fst-italic fw-bold">Area:</label>
                 <input th:field="*{area}" type="number" class="form-control" id="area">
+                <p style="color: red" th:errors="*{area}" th:if="${#fields.hasErrors('area')}"> </p>
+
             </div>
 
             <div class="mb-3">
                 <label for="cost" class="form-label fst-italic fw-bold">Cost:</label>
                 <input th:field="*{cost}" type="number" class="form-control" id="cost">
+                <p style="color: red" th:errors="*{cost}" th:if="${#fields.hasErrors('cost')}"> </p>
             </div>
 
             <div class="mb-3">
                 <label for="maxPeople" class="form-label fst-italic fw-bold">Max People:</label>
                 <input th:field="*{maxPeople}" type="number" class="form-control" id="maxPeople">
+                <p style="color: red" th:errors="*{maxPeople}" th:if="${#fields.hasErrors('maxPeople')}"> </p>
             </div>
 
             <div class="mb-3">
@@ -81,10 +87,13 @@
             <div class="mb-3" id="opt2" style="display: none">
                 <label for="poolArea" class="form-label fst-italic fw-bold">Pool Area:</label>
                 <input th:field="*{poolArea}"  type="number" value="0" name="Pool" class="form-control" id="poolArea">
+                <p style="color: red" th:errors="*{poolArea}" th:if="${#fields.hasErrors('poolArea')}"> </p>
+
             </div>
             <div class="mb-3" id="opt3" style="display: none">
                 <label for="numberOfFloors" class="form-label fst-italic fw-bold">Number Of Floors:</label>
                 <input  th:field="*{floors}" type="number" value="0" name="floors" class="form-control" id="numberOfFloors">
+                <p style="color: red" th:errors="*{floors}" th:if="${#fields.hasErrors('floors')}"> </p>
             </div>
             <div class="mb-3" id="opt4" style="display: none">
                 <label for="descriptionOtherConvenience" class="form-label fst-italic fw-bold">Description Other Convenience:</label>
